# IgnitionController_STM32

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  DebugCleanup.bat  IgnitionController.ioc  IgnitionController.txt  Jenkinsfile  Jenkinsfile.build  Jenkinsfile.unit  README.md  arm-none-eabi-gcc.cmake  build.bat  build_gtest.bat
Core/Inc/: IgnitionCotrol_Main.h  IgnitionCtrl_CalculateTimesAndAngles.h  IgnitionCtrl_Config.h  IgnitionCtrl_HW_Wrapper.h  IgnitionCtrl_IgnAngleTable.h  IgnitionCtrl_Init.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: IgnitionCotrol_Main.c  IgnitionCtrl_CalculateTimesAndAngles.c  IgnitionCtrl_HW_Wrapper.c  IgnitionCtrl_IgnAngleTable.c  IgnitionCtrl_Init.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Debug/: IgnitionController.elf  IgnitionController.list  IgnitionController.map  IgnitionController.srec  makefile  objects.list
Design/: .project  IgnitionController.emx  topicdiagram.tpx
Design/DesignDecisions/: classdiagram.dnx
Design/Requirements/: IgnitionControllerRequriements.txt
Design/templates/: dynamictypes.xml
Design/topologies/: IgnitionControllerTopology.topology  IgnitionControllerTopology.topologyv
Documentation/: Ignition_Controller.chm  cfg.doxy  createDoc.bat  doxyWarnings.txt  generateImages.bat  genericmdf.markdown  project.doxy
Documentation/xml/: Doxyfile.xml  _description.xml  _exceptions.xml  _ignition_cotrol___main_8c.xml  _ignition_cotrol___main_8h.xml  _ignition_ctrl___calculate_times_and_angles_8c.xml  _ignition_ctrl___calculate_times_and_angles_8h.xml  _ignition_ctrl___config_8h.xml  _ignition_ctrl___h_w___wrapper_8c.xml  _ignition_ctrl___h_w___wrapper_8h.xml  _ignition_ctrl___ign_angle_table_8c.xml  _ignition_ctrl___ign_angle_table_8h.xml  _ignition_ctrl___init_8c.xml  _ignition_ctrl___init_8h.xml  _links.xml  _resources.xml  _terms_and_abbreviations.xml  _tests.xml  dir_16251f429df57cd7c4230dbd1c727091.xml  dir_37390c7c9d01c8435b345b0b327b706d.xml  dir_83a19c90a65021bd057fa02b52f7b569.xml  dir_84c3a99d771e48ebb40fac9ee8bbcb9c.xml  dir_a0c9d6ff4dc71b69cb7e294fbd37b370.xml  (+22 more)
Drivers/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_tim.c
Testing/DynamicTests/: CMakeLists.txt  test_IgnitionCtrl_CalculateTimesAndAngles.c.bak  test_IgnitionCtrl_CalculateTimesAndAngles.h  test_IgnitionCtrl_CalculateTimesAndAngles.h.bak  test_IgnitionCtrl_IgnAngleTable.h  test_IgnitionCtrl_Init.c  test_main.c
Testing/DynamicTests/code/: test_IgnitionCotrol_Main.c  test_IgnitionCotrol_Main.h  test_IgnitionCtrl_CalculateTimesAndAngles.c  test_IgnitionCtrl_Config.h  test_IgnitionCtrl_HW_Wrapper.c  test_IgnitionCtrl_HW_Wrapper.h  test_IgnitionCtrl_IgnAngleTable.c  test_IgnitionCtrl_Init.h  test_gtest.cpp
(+134 files in other folders)
